--- a/package.json
+++ b/package.json
@@ -1,69 +1,53 @@
 {
-	"name": "ng-bootstrap-input",
-	"version": "1.0.0",
-	"keywords": [
-		"input",
-		"bootstrap",
-		"package",
-		"angular2",
-		"angular",
-		"npm",
-		"error",
-		"formGroup",
-		"form",
-		"validation"
-	],
-	"repository": {
-		"type": "git",
-		"url": ""
-	},
-	"license": "MIT",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build",
-		"test": "ng test",
-		"lint": "ng lint",
-		"e2e": "ng e2e",
-		"packagr": "ng-packagr -p ng-package.json"
-	},
-	"private": false,
-	"dependencies": {
-		"@angular/animations": "^4.2.4",
-		"@angular/common": "^4.2.4",
-		"@angular/compiler": "^4.2.4",
-		"@angular/core": "^4.2.4",
-		"@angular/forms": "^4.2.4",
-		"@angular/http": "^4.2.4",
-		"@angular/platform-browser": "^4.2.4",
-		"@angular/platform-browser-dynamic": "^4.2.4",
-		"@angular/router": "^4.2.4",
-		"angular2-text-mask": "^8.0.4",
-		"core-js": "^2.4.1",
-		"rxjs": "^5.4.2",
-		"text-mask-addons": "^3.7.1",
-		"zone.js": "^0.8.14"
-	},
-	"devDependencies": {
-		"@angular/cli": "1.4.3",
-		"@angular/compiler-cli": "^4.2.4",
-		"@angular/language-service": "^4.2.4",
-		"@types/jasmine": "~2.5.53",
-		"@types/jasminewd2": "~2.0.2",
-		"@types/node": "~6.0.60",
-		"codelyzer": "~3.1.1",
-		"jasmine-core": "~2.6.2",
-		"jasmine-spec-reporter": "~4.1.0",
-		"karma": "~1.7.0",
-		"karma-chrome-launcher": "~2.1.1",
-		"karma-cli": "~1.0.1",
-		"karma-coverage-istanbul-reporter": "^1.2.1",
-		"karma-jasmine": "~1.1.0",
-		"karma-jasmine-html-reporter": "^0.2.2",
-		"ng-packagr": "^1.6.0",
-		"protractor": "~5.1.2",
-		"ts-node": "~3.2.0",
-		"tslint": "~5.3.2",
-		"typescript": "~2.3.3"
-	}
+  "name": "ng-bootstrap-input-app",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/common": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/animations": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "angular2-text-mask": "^9.0.0",
+    "core-js": "^2.5.4",
+    "rxjs": "^6.0.0",
+    "zone.js": "^0.8.26"
+  },
+  "devDependencies": {
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "ng-packagr": "^3.0.0-rc.2",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "typescript": "~2.7.2",
+    "@angular/cli": "~6.0.8",
+    "@angular/language-service": "^6.0.3",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.3.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1"
+  }
 }
